--- a/orbio-openclaw-plugin/package.json
+++ b/orbio-openclaw-plugin/package.json
@@ -37,20 +37,28 @@
     "access": "public",
     "provenance": true
   },
-  "packageManager": "pnpm@10.28.2",
   "scripts": {
     "clean": "node -e \"const fs=require('fs'); fs.rmSync('dist',{recursive:true,force:true});\"",
     "build": "pnpm clean && tsc -p tsconfig.build.json",
+    "lint": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage",
+    "quality": "pnpm lint && pnpm typecheck && pnpm coverage",
     "typecheck": "tsc --noEmit",
-    "verify": "pnpm typecheck && pnpm build",
+    "verify": "pnpm quality && pnpm build",
     "prepack": "pnpm build"
   },
   "dependencies": {
     "@sinclair/typebox": "^0.34.41"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@types/node": "^22.13.4",
-    "typescript": "^5.7.3"
+    "eslint": "^9.21.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.25.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=20"
