chore: add real environment smoke test gate before publish

--- a/orbio-openclaw-plugin/package.json
+++ b/orbio-openclaw-plugin/package.json
@@ -43,6 +43,7 @@
     "lint": "eslint \"{src,tests}/**/*.ts\" --max-warnings=0",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
+    "smoke:live": "pnpm build && node scripts/live-smoke.mjs",
     "quality": "pnpm lint && pnpm typecheck && pnpm coverage",
     "typecheck": "tsc --noEmit",
     "verify": "pnpm quality && pnpm build",
