chore(geo): add bilingual agent-discovery metadata and llms manifests

--- a/orbio-openclaw-plugin/package.json
+++ b/orbio-openclaw-plugin/package.json
@@ -17,6 +17,7 @@
     "dist",
     "openclaw.plugin.json",
     "skills",
+    "llms.txt",
     "README.md"
   ],
   "openclaw": {
@@ -78,6 +79,13 @@
     "prospecting",
     "cnpj",
     "brazilian-companies",
-    "chatops"
+    "chatops",
+    "descoberta-de-contas",
+    "geracao-de-leads",
+    "prospeccao-b2b",
+    "automacao-comercial",
+    "pipeline-comercial",
+    "empresas-brasileiras",
+    "busca-cnpj"
   ]
 }
